--- a/style/main.css
+++ b/style/main.css
@@ -203,3 +203,22 @@ nav{
     left: -18px;
     top: 43px;
 }
+.media{
+    color: white;
+    margin-left: 10%;
+    margin-bottom: 70px;
+}
+.media iframe{
+    width: 100%;
+    height: 668px;
+}
+#pic{
+    flex-direction: row;
+
+}
+.pic1{
+    content: url(../img/fon1.svg);
+}
+.pic2{
+    content: url(../img/fon2.svg);
+}
