--- a/style/main.css
+++ b/style/main.css
@@ -212,13 +212,52 @@ nav{
     width: 100%;
     height: 668px;
 }
-#pic{
-    flex-direction: row;
+
+
+
+
+
+.pic{
+   max-width: 1200px;
+   margin: 0 auto;
+   padding: 0 350px;
 
 }
-.pic1{
-    content: url(../img/fon1.svg);
+.card-section{
+    padding: 650px 0;
 }
-.pic2{
-    content: url(../img/fon2.svg);
+.cards{
+    display: grid;
+
+    grid-template-columns: 1fr 1fr;
+ 
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    
+}
+
+.card_type1{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-end;
+    padding: 40px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-image: url(../img/fon1.svg);
+    color: white;
+}
+.card_type1::before{
+    content: "";
+    width: 100%;
+    height: 200px;
+    display: block;
+    background-size: cover;
+    background-position: center;
+}
+.loga,
+.text,
+ button{
+    padding: 30px 80px;
 }
